--- a/systemtest/approvals/TestErrorIngest.approved.json
+++ b/systemtest/approvals/TestErrorIngest.approved.json
@@ -34,9 +34,11 @@
             "container": {
                 "id": "container-id"
             },
-            "data_stream.dataset": "apm.error",
-            "data_stream.namespace": "default",
-            "data_stream.type": "logs",
+            "data_stream": {
+                "dataset": "apm.error",
+                "namespace": "default",
+                "type": "logs"
+            },
             "error": {
                 "grouping_key": "d6b3f958dfea98dc9ed2b57d5f0c48bb",
                 "grouping_name": "Cannot read property 'baz' of undefined",
@@ -110,6 +112,9 @@
                     "version": "8.0.0"
                 },
                 "version": "5.1.3"
+            },
+            "span": {
+                "id": "1234567890987654"
             },
             "timestamp": {
                 "us": 1533827045999000
