--- a/systemtest/approvals/TestOTLPGRPCLogs.approved.json
+++ b/systemtest/approvals/TestOTLPGRPCLogs.approved.json
@@ -6,9 +6,11 @@
                 "name": "otlp/go",
                 "version": "unknown"
             },
-            "data_stream.dataset": "apm.app.unknown",
-            "data_stream.namespace": "default",
-            "data_stream.type": "logs",
+            "data_stream": {
+                "dataset": "apm.app.unknown",
+                "namespace": "default",
+                "type": "logs"
+            },
             "event": {
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
